# donna

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  depmesh.toml  docker-compose.yml  donna.toml  pyproject.toml  tach.toml  todo.org
donna/: README.md  pyproject.toml
donna/artifacts/: intro.md
donna/artifacts/usage/: artifacts.md  cli.md  worlds.md
donna/artifacts/work/: do_it.md
donna/cli/: __init__.py  __main__.py  application.py  entities.py  errors.py  types.py  utils.py
donna/cli/commands/: artifacts.py  journal.py  projects.py  sessions.py  skills.py  version.py  workspaces.py
donna/cli/tests/: conftest.py  helpers.py  test_artifacts.py  test_sessions.py  test_skills.py  test_version.py  test_workspaces.py
donna/context/: __init__.py  artifacts.py  context.py  entity_cache.py  journal.py  output.py  primitives.py  state.py  value_scope.py
donna/context/tests/: __init__.py  helpers.py  make.py  test_artifacts.py  test_context.py  test_journal.py  test_primitives.py  test_state.py
donna/core/: __init__.py  entities.py  errors.py  result.py  utils.py
donna/core/tests/: test_entities.py  test_errors.py  test_result.py  test_utils.py
donna/domain/: __init__.py  artifact_ids.py  constants.py  errors.py  id_paths.py  ids.py  internal_ids.py  paths.py  python_path.py  types.py
donna/domain/tests/: test_artifact_ids.py  test_id_paths.py  test_ids.py  test_internal_ids.py
donna/donna/agents/: domain.py
donna/donna/artifacts/: domain.py
donna/donna/behaviors/: end_to_end_story_cycle.py
donna/donna/cli/: __main__.py  application.py  types.py  utils.py
donna/donna/core/: entities.py  errors.py  result.py  utils.py
donna/donna/domain/: ids.py  layout.py  types.py
donna/donna/lib/: __init__.py
donna/donna/machine/: __init__.py  action_requests.py  artifacts.py  cells.py  changes.py  counters.py  errors.py  events.py  operations.py  plans.py  primitives.py  records.py  sessions.py  specifications.py  state.py  stories.py  tasks.py  templates.py  workflows.py
donna/donna/primitives/: __init__.py
donna/donna/protocol/: cell_shortcuts.py  cells.py  modes.py  nodes.py
donna/donna/register/: register.py  storage.py
donna/donna/scenarios/: describe_story.py  end_to_end_story_cycle.py
donna/donna/std/: artifacts.py  directives.py  operations.py  ops.py
donna/donna/stories/: domain.py
donna/donna/workflows/: artifacts.py  changes.py  end_to_end_story_cycle.py  operations.py  records.py  specifications.py  tasks.py
donna/donna/world/: __init__.py  artifact_builder.py  artifact_source.py  artifacts.py  config.py  errors.py  initialization.py  layout.py  markdown.py  navigator.py  primitives_register.py  storage.py  templates.py  utils.py
donna/fixtures/specs/: intro.donna.md  intro.md
donna/lib/: __init__.py  sources.py  worlds.py
donna/lib/tests/: __init__.py  test_init.py
donna/machine/: __init__.py  action_requests.py  artifacts.py  changes.py  context.py  errors.py  journal.py  operations.py  primitives.py  sessions.py  state.py  tasks.py  templates.py  templates_context.py
donna/machine/tests/: helpers.py  make.py  test_action_requests.py  test_artifacts.py  test_changes.py  test_context.py  test_errors.py  test_operations.py  test_primitives.py  test_state.py  test_tasks.py  test_templates.py
donna/primitives/: __init__.py
donna/primitives/artifacts/: __init__.py  specification.py  workflow.py
donna/primitives/directives/: __init__.py  goto.py  list.py  task_variable.py  view.py
donna/primitives/operations/: finish_workflow.py  output.py  request_action.py  run_script.py
donna/primitives/sections/: __init__.py  finish_workflow.py  output.py  request_action.py  run_script.py  text.py
donna/primitives/tests/: __init__.py  make.py
donna/protocol/: __init__.py  cell_shortcuts.py  cells.py  errors.py  journal.py  modes.py  utils.py
donna/protocol/formatters/: __init__.py  automation.py  base.py  human.py  llm.py
donna/protocol/tests/: make.py  test_cell_shortcuts.py  test_cells.py  test_errors.py  test_journal.py  test_modes.py  test_nodes.py
donna/runtime/: __init__.py  sessions.py
donna/runtime/tests/: __init__.py  make.py  test_sessions.py
donna/skills/: __init__.py  entities.py  fixtures.py
donna/skills/fixtures/: artifacts.md  configuration.md  initialization.md  (+2 more)
donna/workspaces/: __init__.py  artifacts.py  artifacts_discovery.py  config.py  constants.py  errors.py  files.py  initialization.py  journal.py  markdown.py  markdown_parser.py  paths.py  sessions.py  templates.py  tmp.py  utils.py
donna/world/: artifacts.py  errors.py  initialization.py  markdown.py
(+237 files in other folders)
