[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donna"
version = "0.4.0"
description = "Deterministic behavior, state machines, artifact management, and meta programming for your coding agent."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12,<4.0"
license = "BSD-3-Clause"
authors = [
  { name = "Aliaksei Yaletski", email = "a.eletsky@gmail.com" },
]
keywords = ["ai", "agent", "cli", "llm", "workflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
dependencies = [
  "pydantic>=2.12,<2.13",
  "typer>=0.20,<0.21",
  "markdown-it-py>=4.0,<4.1",
  "mdformat>=1.0.0,<1.1.0",
  "jinja2>=3.1,<3.2",
  "tomli-w>=1.2,<1.3",
]

[project.urls]
Homepage = "https://github.com/Tiendil/donna"
Repository = "https://github.com/Tiendil/donna"
Issues = "https://github.com/Tiendil/donna/issues"
Changelog = "https://github.com/Tiendil/donna/blob/main/CHANGELOG.md"

[project.scripts]
donna = "donna.cli.application:main"

[dependency-groups]
dev = [
  "changy==0.4.*",
  "isort==7.0.*",
  "black==25.12.*",
  "autoflake==2.3.*",
  "codespell==2.4.*",
  "tach==0.34.*",
  "flake8==7.3.*",
  "flake8-docstrings==1.7.*",
  "flake8-functions==0.0.*",
  "flake8-annotations-complexity==0.1.*",
  "flake8-cognitive-complexity==0.1.*",
  "flake8-pytest==1.4.*",
  "flake8-bandit==4.1.*",
  "flake8-absolute-import==1.0.*",
  "flake8-print==5.0.*",
  "flake8-pyproject==1.2.*",
  "flake8-eradicate==1.5.*",
  "mypy==1.19.*",
  "types-PyYAML==6.0.*",
  "pytest==9.0.*",
  "pytest-mock==3.15.*",
]

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119

[tool.flake8]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D200",
  "D400",
  "D401",
  "S101",
  "S113",
  "S311",
  "W503",
  "CFQ004",
  "E203",  # blake formats [x:y] with spaves
]
max-line-length = 119
exclude = [
  "build",
  "donna.egg-info",
]

[tool.autoflake]
in_place = true
remove_all_unused_imports = true
remove_unused_variables = true
recursive = true

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
implicit_reexport = true
disallow_untyped_calls = true
disallow_any_explicit = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.hatch.build.targets.sdist]
include = [
  "/donna",
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["donna"]
